--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,10 @@
 </header>
 <!-- Login -->
 
-<!-- <app-login></app-login> -->
+<app-login></app-login>
 <!-- <app-details-form></app-details-form> -->
 <!-- <app-college-name></app-college-name> -->
-<app-view-form></app-view-form>
+<!-- <app-view-form></app-view-form> -->
 
 <br>
 <!--Footer-->
