--- a/src/app/view-form/view-form.component.css
+++ b/src/app/view-form/view-form.component.css
@@ -3,12 +3,18 @@
     justify-content: center;
     flex-wrap: nowrap;
 }
+
 .rows{
     width: 800px;
-    height: 1100px;
+    height: 1000px;
     margin-right: 0px;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
+}
+#content{
+    width: 700px;
+    height: 800px;
+    margin-left: 50px;
 }
 #input{
     width: 300px;
@@ -26,4 +32,15 @@ button:hover{
 p{
     font-size: 35px;
     font-weight: 1000;
+}
+
+@media(max-width: 700px){
+    .rows{
+        height: 1500px;
+    }
+    #content{
+        width: 348px;
+        height: 1300px;
+        margin-left: 0px;
+    }
 }
