--- a/src/app/view-form/view-form.component.html
+++ b/src/app/view-form/view-form.component.html
@@ -1,104 +1,109 @@
 <div class="container">
     <div class="rows mt-4" style="text-align: center;">
-        <p class="mt-3">Students Details</p>
-        <div class="form-group row mt-5">
-            <label for="inputPassword" class="col-sm-4 col-form-label">Year of Student :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{Year_of_student}}" readonly>
+        <p class="mt-1" style="font-size: 35px;">Students Details</p>
+        <div class="mt-3 " id="content" #content>
+            <div class="">
+
+            </div>
+            <div class="form-group row ">
+                <label for="inputPassword" class="col-sm-4 col-form-label">Year of Student :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{Year_of_student}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label">Name of the Course :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{name1}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label">Name of the Branch :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{branch}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> Student Name :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{Stud_name}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label">Communal Category :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{Communa_lCategory}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> Community Admitted :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{Community_Admitted}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> Entry Mode :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{Entry_Mode}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> Tancet Score :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{tancet}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> Gate Score :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{gate}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> History of Arrears :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{history_arrear}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> Lack of Attendace :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{attendance}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> Account No :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{account_no}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> Bank Name :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{bank_name}}" readonly>
+                </div>
+            </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label"> IFSC Code :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{ifsc_code}}" readonly>
+                </div>
             </div>
         </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label">Name of the Course :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{name1}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label">Name of the Branch :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{branch}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> Student Name :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{Stud_name}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label">Communal Category :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{Communa_lCategory}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> Community Admitted :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{Community_Admitted}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> Entry Mode :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{Entry_Mode}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> Tancet Score :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{tancet}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> Gate Score :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{gate}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> History of Arrears :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{history_arrear}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> Lack of Attendace :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{attendance}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> Account No :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{account_no}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> Bank Name :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{bank_name}}" readonly>
-            </div>
-        </div>
-        <div class="form-group row mt-3">
-            <label for="inputPassword" class="col-sm-4 col-form-label"> IFSC Code :</label>
-            <br><br>
-            <div class="col-sm-6">
-                <input type="text" class="form-control" value="{{ifsc_code}}" readonly>
-            </div>
-        </div>
-        <button class="btn btn-outline-primary mt-4" (click)="printout()">Print</button>
+        <button class="btn btn-outline-primary " (click)="printout()">Print</button>
     </div>
 </div>
