--- a/src/app/college-name/college-name.component.css
+++ b/src/app/college-name/college-name.component.css
@@ -1,19 +1,18 @@
 .details-container{
     display: flex;
-    justify-content:space-between;
+    justify-content:center;
     flex-wrap: wrap;
 }
 .cont-rows{
-    width: 900px;
+    width: 80%;
     height: 750px;
-    margin-right: 150px;
+    margin-left: 60px;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
 }
 .cont-navbar{
     width: 200px;
     height: 770px;
-    margin-top: -15px;
     background: #37DCF2;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
 }
@@ -59,12 +58,14 @@ button:hover{
   @media(max-width: 600px)
   {
     .cont-navbar{
-        display: none;
+        width: 100%;
+        height: 680px;
+        margin-bottom: 30px;
     }
     .cont-rows{
         height: 800px;
-        width: 380px;
-        margin-right: 0px;
+        width: 100%;
+        margin: 0px;
     }
     .college-name{
         font-size: 1.8rem;
