--- a/src/app/details-form/details-form.component.css
+++ b/src/app/details-form/details-form.component.css
@@ -1,12 +1,13 @@
 .details-container{
     display: flex;
-    justify-content:space-between;
+    justify-content:center;
     flex-wrap: wrap;
 }
 .cont-rows{
-    width: 1100px;
+    width: 81%;
     height: 1400px;
-    margin-right: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
 }
@@ -16,8 +17,8 @@
 }
 .cont-navbar{
     width: 200px;
-    height: 1420px;
-    margin-top: -15px;
+    height: 1400px;
+    /* margin-top: -15px; */
     background: #37DCF2;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
 }
@@ -43,11 +44,14 @@
   @media(max-width: 600px)
   {
     .cont-navbar{
-        display: none;
+        height: 680px;
+        width: 100%;
+        margin-bottom: 30px;
     }
     .cont-rows{
-        height: 1780px;
-        margin-right: 0px;
+        width: 100%;
+        height: 1800px;
+        margin: 0px;
     }
     #detail-name{
         width: 80px;
