--- a/src/app/view-form/view-form.component.html
+++ b/src/app/view-form/view-form.component.html
@@ -5,6 +5,13 @@
             <div class="">
 
             </div>
+            <div class="form-group row mt-1">
+                <label for="inputPassword" class="col-sm-4 col-form-label">College :</label>
+                <br><br>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" value="{{college}}" readonly>
+                </div>
+            </div>
             <div class="form-group row ">
                 <label for="inputPassword" class="col-sm-4 col-form-label">Year of Student :</label>
                 <br><br>
@@ -61,13 +68,13 @@
                     <input type="text" class="form-control" value="{{tancet}}" readonly>
                 </div>
             </div>
-            <div class="form-group row mt-1">
+            <!-- <div class="form-group row mt-1">
                 <label for="inputPassword" class="col-sm-4 col-form-label"> Gate Score :</label>
                 <br><br>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" value="{{gate}}" readonly>
                 </div>
-            </div>
+            </div> -->
             <div class="form-group row mt-1">
                 <label for="inputPassword" class="col-sm-4 col-form-label"> History of Arrears :</label>
                 <br><br>
