--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -284,7 +284,7 @@
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
                                 <input type="text" style="max-width: 100px;" formControlName="history_Arrear"
-                                    placeholder="Yes / No" class="form-control" [(ngModel)]="History_arrea"
+                                    placeholder="Yes / No" class="form-control" [(ngModel)]="History_arrea1"
                                     [ngClass]="{ 'is-invalid': submitted && f.history_Arrear.errors }">
 
                                 <div *ngIf="submitted && f.history_Arrear.errors" class="invalid-feedback">
