--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,8 @@
 </header>
 <!-- Login -->
 
-<!-- <app-login></app-login> -->
-<app-details-form></app-details-form>
+<app-login></app-login>
+<!-- <app-details-form></app-details-form> -->
 <!-- <app-college-name></app-college-name> -->
 <!-- <app-view-form></app-view-form> -->
 
