--- a/src/app/details-form/details-form.component.css
+++ b/src/app/details-form/details-form.component.css
@@ -40,6 +40,9 @@
     color: aliceblue;
     font-size: 16px;
   }
+  #input_y_n{
+      text-transform: uppercase;
+  }
 
   @media(max-width: 600px)
   {
