--- a/src/app/view-form/view-form.component.html
+++ b/src/app/view-form/view-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="rows mt-4" style="text-align: center;">
         <p class="mt-1" style="font-size: 35px;">Students Details</p>
-        <!-- <div class="mt-3 " id="excel-table">
+        <div class="mt-3 ">
             <div class="">
 
             </div>
@@ -103,109 +103,74 @@
                     <input type="text" class="form-control" value="{{ifsc_code}}" readonly>
                 </div>
             </div>
-        </div> -->
-        <table class="mt-3 " id="excel-table">
+        </div>
+        <table class="mt-3 view_table " id="excel-table">
             <div class="">
 
             </div>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label">College :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{college}}" readonly>
-                </td>
+            <tr>
+                <th for="inputPassword" class="col-sm-4 col-form-label">College </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label">Year of Student </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label">Name of the Course </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label">Name of the Branch </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label"> Student Name </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label">Communal Category </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label"> Community Admitted </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label"> Entry Mode </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label"> Tancet Score </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label"> History of Arrears </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label"> Lack of Attendace </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label"> Account No </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label"> Bank Name </th>
+                <th for="inputPassword" class="col-sm-4 col-form-label"> IFSC Code </th>
+
             </tr>
-            <tr class="form-group row ">
-                <th for="inputPassword" class="col-sm-4 col-form-label">Year of Student :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{Year_of_student}}" readonly>
+            <tr>
+                <td>
+                    {{college}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label">Name of the Course :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{name1}}" readonly>
+                <td>
+                    {{Year_of_student}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label">Name of the Branch :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{branch}}" readonly>
+                <td>
+                    {{name1}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Student Name :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{Stud_name}}" readonly>
+                <td>
+                    {{branch}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label">Communal Category :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{Communa_lCategory}}" readonly>
+                <td>
+                    {{Stud_name}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Community Admitted :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{Community_Admitted}}" readonly>
+                <td>
+                    {{Communa_lCategory}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Entry Mode :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{Entry_Mode}}" readonly>
+                <td>
+                    {{Community_Admitted}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Tancet Score :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{tancet}}" readonly>
+                <td>
+                    {{Entry_Mode}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label"> History of Arrears :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{history_arrear}}" readonly>
+                <td>
+                    {{tancet}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Lack of Attendace :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{lack_attentance}}" readonly>
+                <td>
+                    {{history_arrear}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Account No :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{account_no}}" readonly>
+                <td>
+                    {{lack_attentance}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label"> Bank Name :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{bank_name}}" readonly>
+                <td>
+                    {{account_no}}
                 </td>
-            </tr>
-            <tr class="form-group row mt-1">
-                <th for="inputPassword" class="col-sm-4 col-form-label"> IFSC Code :</th>
-                <br><br>
-                <td class="col-sm-6">
-                    <input type="text" class="form-control" value="{{ifsc_code}}" readonly>
+                <td>
+                    {{bank_name}}
                 </td>
+                <td>
+                    {{ifsc_code}}
+                </td>
+
             </tr>
+
         </table>
         <button class="btn btn-outline-primary " (click)="printout()">Print</button>
     </div>
