--- a/src/app/details-form/details-form.component.css
+++ b/src/app/details-form/details-form.component.css
@@ -5,7 +5,8 @@
 }
 .cont-rows{
     width: 81%;
-    height: 1700px;
+    /* height: 1700px; */
+    height: inherit;
     margin-left: 20px;
     margin-right: 20px;
     border-radius: 10px;
@@ -53,7 +54,6 @@
     }
     .cont-rows{
         width: 100%;
-        height: 1800px;
         margin: 0px;
     }
     #detail-name{
