--- a/src/app/college-name/college-name.component.html
+++ b/src/app/college-name/college-name.component.html
@@ -85,7 +85,7 @@
             </div>
             <br>
             <br>
-            <h1 style="text-decoration: underline;">Contanct :</h1>
+            <h1 style="text-decoration: underline;">Contact :</h1>
             <br>
             <div class="college-cont" style="text-align: center;">
                 <table class=" table-borderless">
@@ -96,7 +96,7 @@
                             <td id="tab-3"></td>
                         </tr>
                         <tr>
-                            <td id="tab-1">Principle/Dean</td>
+                            <td id="tab-1">Principle Name</td>
                             <td id="tab-2">:</td>
                             <td id="tab-3">Dr.C.VASANTHANAYAKI (Phno : 9487564005)</td>
                         </tr>
