--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -121,12 +121,12 @@
                                     [(ngModel)]="value2" class="form-control"
                                     [ngClass]="{ 'is-invalid': submitted && f.branch.errors }">
                                     <option value="">Choose...</option>
-                                    <option value="M.E STRUCTURAL">M.E STRUCTURAL</option>
-                                    <option value="M.E CAD">M.E CAD</option>
-                                    <option value="ME THERMAL">ME THERMAL</option>
-                                    <option value="M.E PED">M.E PED</option>
-                                    <option value="M.E WELDING TECHNOLOGY">M.E WELDING TECHNOLOGY</option>
                                     <option value="M.E COMMUNICATION SYSTEMS">M.E COMMUNICATION SYSTEMS</option>
+                                    <option value="M.E COMPUTER AIDED DESIGN">M.E COMPUTER AIDED DESIGN</option>
+                                    <option value="ME POWER ELECTRONICS & DRIVES">ME POWER ELECTRONICS & DRIVES</option>
+                                    <option value="M.E STRUCTURAL ENGINEERING">M.E STRUCTURAL ENGINEERING</option>
+                                    <option value="M.E THERMAL ENGINEERING">M.E THERMAL ENGINEERING</option>
+                                    <option value="M.E WELDING TECHNOLOGY">M.E WELDING TECHNOLOGY</option>
                                 </select>
                                 <div *ngIf="submitted && f.branch.errors" class="invalid-feedback">
                                     <div *ngIf="f.branch.errors.required">Course Name is required</div>
@@ -146,7 +146,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td id="detail-name" class="pt-3">Name of the student in which the candidate was admitted
+                            <td id="detail-name" class="pt-3">Community category under which student was admitted
                             </td>
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
@@ -170,7 +170,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td id="detail-name" class="pt-3">Community of the Student Admitted</td>
+                            <td id="detail-name" class="pt-3">Community category of the student</td>
                             <td id="detail-gama" class="pt-3">:</td>
                             <td class="pt-3">
                                 <select formControlName="community_Admitted" class="form-control" [(ngModel)]="value4"
@@ -260,7 +260,8 @@
                                 <div *ngIf="marked" class="mt-3" style="max-width: 400px;">
                                     <label class="mt-3" for="inputCity">Histroy of Arrear</label>
 
-                                    <select formControlName="history_Arrear" class="form-control" [(ngModel)]="value5">
+                                    <select formControlName="history_Arrear_2" class="form-control"
+                                        [(ngModel)]="value10">
                                         <option value="">Choose...</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
